# WOOFi_Solana

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  usdc-mock.json  usdc.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/anchor/: action.yml
.github/workflows/: checks.yml  docs.yml  publish.yml
.husky/: pre-commit
docs/: README.md  architecture.md  environment-setup.md  overview.md
lz-solana-sdk-v2/: CHANGELOG.md  package.json
lz-solana-sdk-v2/deployments/solana-mainnet/: blocked_messagelib.json  dvn-gcda.json  dvn-horizen.json  dvn-nethermind.json  dvn.json  endpoint.json  executor.json  pricefeed.json  uln.json
lz-solana-sdk-v2/deployments/solana-sandbox-local/: blocked_messagelib.json  dvn-gcda.json  dvn.json  endpoint.json  executor.json  oft.json  pricefeed.json  simple_messagelib.json  uln.json
lz-solana-sdk-v2/deployments/solana-testnet/: blocked_messagelib.json  dvn-gcda.json  dvn.json  endpoint.json  executor.json  oft.json  pricefeed.json  uln.json
programs/rebate_manager/: Cargo.toml
programs/rebate_manager/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/rebate_manager/src/instructions/: claim_rebate_fee.rs  mod.rs
programs/rebate_manager/src/instructions/admin/: add_rebate.rs  add_sub_rebate.rs  create_rebate_info.rs  create_rebate_manager.rs  create_rebate_pool.rs  deposit_withdraw.rs  mod.rs  pause_unpause.rs  set_admin.rs
programs/rebate_manager/src/state/: mod.rs  rebate_info.rs  rebate_manager.rs  rebate_pool.rs  wooconfig.rs
programs/rebate_manager/src/util/: token.rs
programs/super_charger/: Cargo.toml
programs/super_charger/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/super_charger/src/instructions/: deposit.rs  initialize_user.rs  instant_withdraw.rs  mod.rs  stake.rs  unstake.rs  withdraw.rs
programs/super_charger/src/instructions/admin/: borrow_only_borrower.rs  create_config.rs  create_lending_manager.rs  create_super_charger.rs  mod.rs  repay_only_admin.rs  set_admin.rs  set_only_admin_config.rs  set_only_admin_lending_manager.rs  set_only_admin_super_charger.rs  set_only_owner_config.rs  set_only_owner_lending_manager.rs
programs/super_charger/src/state/: lending_manager.rs  mod.rs  super_charger.rs  super_charger_config.rs  user_state.rs
programs/super_charger/src/util/: mod.rs  token.rs  vault.rs
programs/woofi/: Cargo.toml
programs/woofi/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/woofi/src/instructions/: claim_fee.rs  claim_rebate_fee.rs  create_config.rs  create_oracle.rs  create_pool.rs  create_rebate_pool.rs  deposit.rs  deposit_withdraw.rs  get_price.rs  mod.rs  pause_pool.rs  pause_unpause.rs  query.rs  set_pool_admin.rs  set_pool_auth_only_admin.rs  set_pool_state.rs  set_rebate_pool_state.rs  set_woo_admin.rs  set_woo_auth_only_owner.rs  set_woo_state.rs  swap.rs  swap_with_rebate.rs  try_query.rs
programs/woofi/src/instructions/admin/: claim_fee.rs  create_config.rs  create_oracle.rs  create_pool.rs  create_swap.rs  create_wooammpool.rs  create_wooracle.rs  deposit_withdraw.rs  incase_token_got_stuck.rs  mod.rs  pause_unpause.rs  repay_lending_manager.rs  set_only_admin_config.rs  set_only_owner_authority.rs  set_only_owner_config.rs  set_pool_auth_only_admin.rs  set_pool_state.rs  set_woo_auth_only_owner.rs  set_woo_state.rs
programs/woofi/src/state/: mod.rs  rebate_pool.rs  wooconfig.rs  woopool.rs  wooracle.rs
programs/woofi/src/util/: decimals.rs  swap_math.rs  token.rs
programs/woofi_sdk/: Cargo.toml
programs/woofi_sdk/src/: lib.rs
programs/woofi_sdk/src/state/: wooracle.rs
programs/woofi_sdk/src/util/: ata_utils.rs  decimals.rs  get_price.rs  helpers.rs  mod.rs  swap_math.rs
programs/woospmm/: Cargo.toml
programs/woospmm/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/woospmmtres/: Cargo.toml
programs/woospmmtres/src/: constants.rs  errors.rs  lib.rs
sdk/: package.json
sdk/src/: admin_tool.ts  client.ts  context.ts  index.ts  spread.ts  tsconfig.json
sdk/src/artifacts/: woofi.json  woofi.ts  woospmm.json  woospmm.ts  woospmmtres.json  (+1 more)
sdk/tests/: 0_woofi_sdk.test.ts  0_woospmm_sdk.test.ts  1_woofi_contract.test.ts  1_woospmm_contract.test.ts  2_woofi_transfer_check.test.ts  3_woofi_deposit.test.ts
tests/: 00_woofi_demo.ts  00_woospmm_demo.ts  0_woofi.ts  0_woospmm.ts  0_woospmmtres.ts  10_woofi_demo.ts  1_woofi_swap.ts  1_woospmm_swap.ts  2_woofi_authority.ts  2_woospmm_authority.ts  2_woospmm_chainlink.ts  2_woospmmtres_pyth.ts  3_wooammpool.ts  3_woofi_chainlink.ts  3_woospmm_chainlink.ts  3_woospmm_swap_chainlink.ts  4_woofi_swap_chainlink.ts  4_woospmm_swap_chainlink.ts  5_super_charger.ts  5_woofi_set_admin.ts  5_woospmm_set_admin.ts  6_woofi_get_events.ts  6_woospmm_get_events.ts  global.ts  woospmm_swap.ts  woospmmtres.ts
tests/utils/: pool.ts  pyth.ts  super-charger-calcs.ts  super-charger-utils.ts  test-consts.ts  token.ts  web3.ts
(+74 files in other folders)
