[workspace]
members = ["programs/woofi", "programs/rebate_manager", "programs/woofi_sdk"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.28"
anchor-spl = "0.28"
anchor-syn = "0.28"
solana-sdk = "~1.16"
solana-client = "~1.16"
solana-account-decoder = "~1.16"
solana-program = "~1.16"
solana-program-test = "~1.16"
tokio = { version = "=1.14.1", features = ["full"] }

anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "26c04a10d20509f360ab176d003bea4c625b16f2" }
jupiter-amm-interface = "=0.4.4"

# SPL
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-memo = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.1.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "79a575fb7af56d26deeda94fef8f55bde7a90df3", features = [
    "no-entrypoint",
] }