[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]

anchor-lang = "0.29"
anchor-spl = "0.29"
spl-token = { version = "=4.0.1", features = ["no-entrypoint"] }
spl-memo = { version = "=4.0.1", features = ["no-entrypoint"] }
solana-program = "=1.17.31"
pyth-solana-receiver-sdk = "=0.3.1"
