[package]
name = "woofi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "woofi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.29.0" }
anchor-spl = { version = "=0.29.0" }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "=4.0.0", features = ["no-entrypoint"] }
solana-program = { version = "=1.17.31" }
pyth-solana-receiver-sdk = "=0.3.1"
