[package]
name = "woofi_sdk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "woofi_sdk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
spl-token = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
jupiter-amm-interface = { workspace = true }
anyhow = "1.0"
pyth-solana-receiver-sdk = "=0.3.1"

